--- a/widget/tests/chrome.ini
+++ b/widget/tests/chrome.ini
@@ -25,6 +25,9 @@ support-files = window_bug593307_offscreen.xhtml window_bug593307_centerscreen.x
 support-files = window_wheeltransaction.xhtml
 [test_ime_state_in_parent.html]
 support-files = window_imestate_iframes.html
+[test_ime_state_on_editable_state_change_in_parent.html]
+support-files =
+  file_ime_state_test_helper.js
 [test_ime_state_on_focus_move_in_parent.html]
 support-files =
   file_ime_state_test_helper.js
