Bug 1806756 - part 2: Make split IME state tests to running part and checking part r=m_kato
For testing it in e10s mode, we need to run focus moving in remote process, but
checking in the parent process.  Therefore, we need to split the test code.
Unfortunately, with this, we cannot check DOM `focus` event, but it's not
required here since it depends on the DOM implementation and this test is not
intended to check it.

Finally, we can run same tests from mochitest-browser-chrome.

Note that the new browser-chrome test fails the first check of the case
`designMode == "off"` because of existing bug.

Differential Revision: https://phabricator.services.mozilla.com/D171194

--- a/widget/tests/browser/browser.ini
+++ b/widget/tests/browser/browser.ini
@@ -1,12 +1,28 @@
+[DEFAULT]
+skip-if = os == 'andriod'
+
 [browser_test_clipboardcache.js]
 skip-if =
-  os == 'android' || (os == 'linux' && ccov) || tsan # Bug 1613516, the test consistently timeouts on Linux coverage builds.
+  (os == 'linux' && ccov) || tsan # Bug 1613516, the test consistently timeouts on Linux coverage builds.
   os == "win" && bits == 32 && !debug # Bug 1759422
   os == "linux" # Bug 1792749
 [browser_test_ContentCache.js]
-skip-if = os == 'android'
+[browser_test_ime_state_on_focus_move_in_remote_content.js]
+support-files =
+  file_ime_state_tests.html
+  ../file_ime_state_test_helper.js
+  ../file_test_ime_state_on_focus_move.js
+[browser_test_ime_state_in_contenteditable_on_focus_move_in_remote_content.js]
+support-files =
+  file_ime_state_tests.html
+  ../file_ime_state_test_helper.js
+  ../file_test_ime_state_on_focus_move.js
+[browser_test_ime_state_in_designMode_on_focus_move_in_remote_content.js]
+support-files =
+  file_ime_state_tests.html
+  ../file_ime_state_test_helper.js
+  ../file_test_ime_state_on_focus_move.js
 [browser_test_InputContextURI.js]
-skip-if = os == 'android'
 [browser_test_swipe_gesture.js]
 run-if = (os == 'mac' || os == 'win' || os == 'linux')
 skip-if =
