--- a/widget/tests/browser/browser.ini
+++ b/widget/tests/browser/browser.ini
@@ -25,6 +25,9 @@ support-files =
   file_ime_state_tests.html
   ../file_ime_state_test_helper.js
   ../file_test_ime_state_on_focus_move.js
+[browser_test_ime_state_in_plugin_in_remote_content.js]
+support-files =
+  ../file_ime_state_test_helper.js
 [browser_test_InputContextURI.js]
 [browser_test_swipe_gesture.js]
 run-if = (os == 'mac' || os == 'win' || os == 'linux')
