--- a/widget/tests/chrome.ini
+++ b/widget/tests/chrome.ini
@@ -23,6 +23,10 @@ support-files = window_bug593307_offscreen.xhtml window_bug593307_centerscreen.x
 [test_keycodes.xhtml]
 [test_wheeltransaction.xhtml]
 support-files = window_wheeltransaction.xhtml
+[test_ime_state_in_contenteditable_on_readonly_change_in_parent.html]
+support-files =
+  file_ime_state_test_helper.js
+  file_test_ime_state_in_contenteditable_on_readonly_change.js
 [test_ime_state_in_parent.html]
 support-files = window_imestate_iframes.html
 [test_ime_state_in_plugin_in_parent.html]
