Bug 1806756 - part 4: Rewrite `runTypeChangingTest` in `test_ime_state_in_parent.html` to make it possible to run in remote content r=m_kato
Unfortunately, the case is completely broken, previous test failure affects to
initialize next test (i.e., just setting focus does not set IME state properly).
Therefore, I couldn't run them with `todo_is` and `todo`.

Differential Revision: https://phabricator.services.mozilla.com/D171199

--- a/widget/tests/browser/browser.ini
+++ b/widget/tests/browser/browser.ini
@@ -15,6 +15,12 @@ support-files =
   file_ime_state_tests.html
   ../file_ime_state_test_helper.js
   ../file_test_ime_state_on_focus_move.js
+[browser_test_ime_state_on_input_type_change_in_remote_content.js]
+skip-if = true # Bug 1817704
+support-files =
+  file_ime_state_tests.html
+  ../file_ime_state_test_helper.js
+  ../file_test_ime_state_on_input_type_change.js
 [browser_test_ime_state_in_contenteditable_on_focus_move_in_remote_content.js]
 support-files =
   file_ime_state_tests.html
