--- a/widget/tests/chrome.ini
+++ b/widget/tests/chrome.ini
@@ -35,6 +35,11 @@ support-files =
 support-files =
   file_ime_state_test_helper.js
   file_test_ime_state_on_focus_move.js
+[test_ime_state_on_input_type_change_in_parent.html]
+skip-if = true # Bug 1817704
+support-files =
+  file_ime_state_test_helper.js
+  file_test_ime_state_on_input_type_change.js
 [test_composition_text_querycontent.xhtml]
 support-files = window_composition_text_querycontent.xhtml
 [test_input_events_on_deactive_window.xhtml]
