Bug 1806756 - part 9: Rewrite IME state tests of text control reframing to make it possible to run in remote content r=m_kato
The remaining tests are not required to run in remote content except some of
the iframe tests.  However, iframe tests are not so important because it's
managed in remote content from point of view of parent process.  Therefore, I
don't port it in this bug.

Differential Revision: https://phabricator.services.mozilla.com/D171204

--- a/widget/tests/browser/browser.ini
+++ b/widget/tests/browser/browser.ini
@@ -44,6 +44,10 @@ support-files =
 [browser_test_ime_state_in_plugin_in_remote_content.js]
 support-files =
   ../file_ime_state_test_helper.js
+[browser_test_ime_state_in_text_control_on_reframe_in_remote_content.js]
+support-files =
+  ../file_ime_state_test_helper.js
+  ../file_test_ime_state_in_text_control_on_reframe.js
 [browser_test_InputContextURI.js]
 [browser_test_swipe_gesture.js]
 run-if = (os == 'mac' || os == 'win' || os == 'linux')
