--- a/widget/tests/chrome.ini
+++ b/widget/tests/chrome.ini
@@ -27,11 +27,13 @@ support-files = window_wheeltransaction.xhtml
 support-files =
   file_ime_state_test_helper.js
   file_test_ime_state_in_contenteditable_on_readonly_change.js
-[test_ime_state_in_parent.html]
-support-files = window_imestate_iframes.html
 [test_ime_state_in_plugin_in_parent.html]
 support-files =
   file_ime_state_test_helper.js
+[test_ime_state_in_text_control_on_reframe_in_parent.html]
+support-files =
+  file_ime_state_test_helper.js
+  file_test_ime_state_in_text_control_on_reframe.js
 [test_ime_state_on_editable_state_change_in_parent.html]
 support-files =
   file_ime_state_test_helper.js
@@ -48,6 +50,8 @@ support-files =
 support-files =
   file_ime_state_test_helper.js
   file_test_ime_state_on_readonly_change.js
+[test_ime_state_others_in_parent.html]
+support-files = window_imestate_iframes.html
 [test_composition_text_querycontent.xhtml]
 support-files = window_composition_text_querycontent.xhtml
 [test_input_events_on_deactive_window.xhtml]
