Bug 1822711 - Enable mochitest-plain on Android Fission builds. Disable some of the tests that are currently failing r=jmaher,taskgraph-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D175077

--- a/dom/security/test/csp/mochitest.ini
+++ b/dom/security/test/csp/mochitest.ini
@@ -306,6 +306,7 @@ skip-if = verify
 [test_bug1229639.html]
 skip-if =
   http3
+  fission && os == "android" # Bug 1827324
 [test_bug1579094.html]
 [test_frame_ancestors_ro.html]
 skip-if =
