Bug 1824980: Enable ARIA reflection (non-idref) on Nightly. r=eeejay
Differential Revision: https://phabricator.services.mozilla.com/D174389

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -206,7 +206,7 @@
 
 - name: accessibility.ARIAReflection.enabled
   type: bool
-  value: false
+  value: @IS_NIGHTLY_BUILD@
   mirror: always
 
 # Whether form controls and images should be focusable with mouse, in content
