Bug 1814101 - Add requestAdapterInfo for webgpu. r=gfx-reviewers,webidl,jimb,smaug
Like the old `name` attribute it replaces, it's always empty for now.

Differential Revision: https://phabricator.services.mozilla.com/D174817

--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -1406,6 +1406,11 @@ DOMInterfaces = {
 'GPUAdapter': {
     'nativeType': 'mozilla::webgpu::Adapter',
 },
+'GPUAdapterInfo': {
+    'nativeType': 'mozilla::webgpu::AdapterInfo',
+    'headerFile': 'mozilla/webgpu/Adapter.h',
+    'wrapperCache': False
+},
 'GPUBindGroup': {
     'nativeType': 'mozilla::webgpu::BindGroup',
 },
