--- a/devtools/client/framework/test/browser.ini
+++ b/devtools/client/framework/test/browser.ini
@@ -166,15 +166,15 @@ skip-if =
 fail-if = a11y_checks # bug 1687737 tools-chevron-menu-button is not accessible
 [browser_webextension_descriptor.js]
 [browser_webextension_dropdown.js]
-skip-if =
-  os == "linux" && !debug # Bug 1714106
+skip-if = true # Temporary
+#  os == "linux" && !debug # Bug 1714106
 # We want these tests to run for mochitest-dt as well, so we include them here:
-[../../../../browser/base/content/test/static/browser_parsable_css.js]
-skip-if =
-  debug
-  asan # no point in running on both opt and debug, and will likely intermittently timeout on debug
-[../../../../browser/base/content/test/static/browser_all_files_referenced.js]
-skip-if =
-  debug
-  asan
-  ccov # no point in running on both opt and debug, and will likely intermittently timeout on debug, Bug 1598726
+#[../../../../browser/base/content/test/static/browser_parsable_css.js]
+#skip-if =
+#  debug
+#  asan # no point in running on both opt and debug, and will likely intermittently timeout on debug
+#[../../../../browser/base/content/test/static/browser_all_files_referenced.js]
+#skip-if =
+#  debug
+#  asan
+#  ccov # no point in running on both opt and debug, and will likely intermittently timeout on debug, Bug 1598726
