Bug 1820893 - Run browsertime performance tests on nightly-as-release builds. r=perftest-reviewers,taskgraph-reviewers,jmaher,afinder
This patch adds three new shippable platforms running the nightly-as-release build. At the same time, browsertime essential tests are enabled for all three platforms on autoland.

Depends on D172029

Differential Revision: https://phabricator.services.mozilla.com/D172030

--- a/taskcluster/ci/test/browsertime-desktop.yml
+++ b/taskcluster/ci/test/browsertime-desktop.yml
@@ -83,7 +83,7 @@ browsertime-tp6:
                         firefox:
                             by-test-platform:
                                 windows.*-32.*: []
-                                .*64.*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
+                                .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
                                 default: []
                         default: []
         treeherder-symbol: Btime(tp6)
@@ -149,7 +149,7 @@ browsertime-responsiveness:
             firefox:
                 by-test-platform:
                     windows.*-32.*: []
-                    .*64.*shippable-qr/.*: [trunk]
+                    .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk]
                     default: []
             default: []
     tier:
@@ -195,7 +195,7 @@ browsertime-tp6-essential:
                     by-test-platform:
                         windows.*-32.*: []
                         macosx1100.*shippable.*: [mozilla-central, mozilla-beta]
-                        .*64.*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
+                        .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
                         default: []
                 default: []
         tier:
@@ -223,6 +223,15 @@ browsertime-tp6-bytecode:
             - twitter
             - wikipedia
             - yahoo-mail
+    run-on-projects:
+        by-app:
+            firefox:
+                by-test-platform:
+                    windows.*-32.*: []
+                    macosx1100.*shippable.*: [mozilla-central, mozilla-beta]
+                    .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
+                    default: []
+            default: []
     mozharness:
         extra-options:
             by-test-platform:
@@ -319,6 +328,7 @@ browsertime-benchmark:
                             windows.*-32.*: []
                             linux.*64.*shippable-qr/.*: [trunk]
                             (windows|macosx1015).*64.*shippable-qr/.*: [trunk, mozilla-release]
+                            .*nightlyasrelease.*: [autoland]
                             default: []
                     default: []
             unity-webgl:
@@ -328,6 +338,16 @@ browsertime-benchmark:
                             windows.*-32.*: []
                             linux.*64.*shippable-qr/.*: [trunk]
                             (windows|macosx1015).*64.*shippable-qr/.*: [trunk, mozilla-release]
+                            default: []
+                    default: []
+            speedometer:
+                by-app:
+                    firefox:
+                        by-test-platform:
+                            windows.*-32.*: []
+                            linux.*64.*shippable-qr/.*: [trunk]
+                            (windows|macosx1015).*64.*shippable-qr/.*: [trunk, mozilla-beta, mozilla-release]
+                            .*nightlyasrelease.*: [autoland]
                             default: []
                     default: []
             default:
@@ -375,7 +395,7 @@ browsertime-benchmark-wasm:
             firefox:
                 by-test-platform:
                     windows.*-32.*: []
-                    .*64.*shippable-qr/.*: [mozilla-central, mozilla-release]
+                    .*64(?!.*nightlyasrelease).*shippable-qr/.*: [mozilla-central, mozilla-release]
                     default: []
             default: []
     max-run-time:
@@ -402,7 +422,7 @@ browsertime-youtube-playback:
     run-on-projects:
         by-test-platform:
             windows.*-32.*: []
-            .*64.*shippable-qr/.*: [mozilla-central, mozilla-release]
+            .*64(?!.*nightlyasrelease).*shippable-qr/.*: [mozilla-central, mozilla-release]
             default: []
     tier: 2
     limit-platforms:
@@ -597,7 +617,7 @@ browsertime-custom:
     run-on-projects:
         by-test-platform:
             windows.*-32.*: []
-            .*64.*shippable-qr/.*: [mozilla-central]
+            .*64(?!.*nightlyasrelease).*shippable-qr/.*: [mozilla-central]
             default: []
     tier: 1
     treeherder-symbol: Btime(ps)
@@ -616,7 +636,7 @@ browsertime-first-install:
     run-on-projects:
         by-test-platform:
             windows.*-32.*: []
-            .*64.*shippable-qr/.*: [trunk]
+            .*64(?!.*nightlyasrelease).*shippable-qr/.*: [trunk]
             default: []
     tier: 1
     treeherder-symbol: Btime(welcome)
@@ -632,7 +652,8 @@ browsertime-grandprix:
             firefox:
                 by-test-platform:
                     windows.*-32.*: []
-                    .*64.*shippable-qr/.*: [autoland, mozilla-central]
+                    .*64(?!.*nightlyasrelease).*shippable-qr/.*: [autoland, mozilla-central]
+                    .*nightlyasrelease.*: [autoland]
                     default: []
             default: []
     tier: 3
