Bug 1639545 - Also run IndexedDB mochitests in private browsing mode.r=dom-storage-reviewers,janv
Depends on D76670

Differential Revision: https://phabricator.services.mozilla.com/D170597

--- a/dom/indexedDB/test/mochitest-common.ini
+++ b/dom/indexedDB/test/mochitest-common.ini
@@ -83,9 +83,9 @@ support-files =
   unit/test_readonly_transactions.js
   unit/test_readwriteflush_disabled.js
   unit/test_remove_index.js
+  unit/test_remove_objectStore.js
   unit/test_rename_index.js
   unit/test_rename_index_errors.js
-  unit/test_remove_objectStore.js
   unit/test_rename_objectStore.js
   unit/test_rename_objectStore_errors.js
   unit/test_request_readyState.js
@@ -136,10 +136,18 @@ skip-if = os == 'win' && os_version == '6.1' # Bug 1342415
 skip-if =
   (os == 'win' && os_version == '6.1') || (verify && (os == 'win')) # Bug 1342415
   http3
+  socketprocess_networking # Bug 1827221: test is toggled off here rather than in private.ini
+                           # because socketprocess_networking is an un-released feature so we
+                           # do not loose much coverage by disabling it here.
+
 [test_blob_worker_xhr_post_multifile.html]
 skip-if =
   os == 'win' && os_version == '6.1' # Bug 1342415
   http3
+  socketprocess_networking # Bug 1827221: test is toggled off here rather than in private.ini
+                           # because socketprocess_networking is an un-released feature so we
+                           # do not loose much coverage by disabling it here.
+
 [test_blob_worker_xhr_read.html]
 [test_blob_worker_xhr_read_slice.html]
 [test_blocked_order.html]
@@ -170,7 +178,6 @@ skip-if = verify
 [test_file_array.html]
 [test_file_cross_database_copying.html]
 [test_file_delete.html]
-[test_file_os_delete.html]
 [test_file_put_deleted.html]
 [test_file_put_get_object.html]
 [test_file_put_get_values.html]
@@ -239,8 +246,6 @@ skip-if = verify
 [test_setVersion_events.html]
 [test_setVersion_exclusion.html]
 [test_setVersion_throw.html]
-[test_storage_manager_estimate.html]
-scheme=https
 [test_success_events_after_abort.html]
 [test_table_locks.html]
 [test_table_rollback.html]
