Backed out changeset 18a6a649b1a1 (bug 1821985) for causing dt failures on browser_webextension_dropdown.js . CLOSED TREE

--- a/devtools/client/framework/test/browser.ini
+++ b/devtools/client/framework/test/browser.ini
@@ -166,8 +166,8 @@ skip-if =
 fail-if = a11y_checks # bug 1687737 tools-chevron-menu-button is not accessible
 [browser_webextension_descriptor.js]
 [browser_webextension_dropdown.js]
-skip-if =
-  os == "linux" && !debug # Bug 1714106
+skip-if = true # Temporary
+#  os == "linux" && !debug # Bug 1714106
 # We want these tests to run for mochitest-dt as well, so we include them here:
 [../../../../browser/base/content/test/static/browser_parsable_css.js]
 skip-if =
