--- a/browser/components/search/test/browser/browser.ini
+++ b/browser/components/search/test/browser/browser.ini
@@ -44,6 +44,11 @@ support-files =
 [browser_search_annotation.js]
 [browser_search_discovery.js]
 [browser_search_nimbus_reload.js]
+[browser_search_telemetry_abandonment.js]
+tags = search-telemetry
+support-files =
+  searchTelemetry.html
+  searchTelemetryAd.html
 [browser_search_telemetry_aboutHome.js]
 tags = search-telemetry
 [browser_search_telemetry_adImpression_component.js]
