Bug 1737920 - Part 3: Look up named view timeline for CSS animations and update WPT expectations. r=emilio
Disable OMTA support for now. We have to make sure what should we do when
the subject is scrolled to "out of view" on the compositor, in Bug 1818346.
And we have to make sure view-timeline-inset animation work well on the
compositor.

Also, update tests,
1) timeline-offset-keyframes-hidden-subject.html, and
2) view-timeline-keyframe-boundary-interpolation.html,
to avoid js error because Gecko doesn't expose Animation object with
scroll-timeline or view-timeline.

And update test, view-timeline-lookup.html, because scroll progress timelines
take precedence over view progress timelines (i.e. choose the matched scroll
progress timeline first), per the spec in
https://drafts.csswg.org/scroll-animations-1/#timeline-scope.

Differential Revision: https://phabricator.services.mozilla.com/D170004

--- a/testing/web-platform/meta/scroll-animations/css/view-timeline-dynamic.html.ini
+++ b/testing/web-platform/meta/scroll-animations/css/view-timeline-dynamic.html.ini
@@ -1,14 +1,7 @@
 [view-timeline-dynamic.html]
-  expected:
-    if (os == "android") and fission: [OK, TIMEOUT]
   [Dynamically changing view-timeline-name]
     expected: FAIL
-
-  [Dynamically changing view-timeline-axis]
-    expected: FAIL
-
-  [Dynamically changing view-timeline-inset]
-    expected: FAIL
+    bug: https://bugzilla.mozilla.org/show_bug.cgi?id=1774060
 
   [Element with view-timeline becoming display:none]
     expected: FAIL
