Bug 1819311 - Collect errors on process launch r=nika,geckoview-reviewers,owlish
Differential Revision: https://phabricator.services.mozilla.com/D171226

--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -2957,6 +2957,22 @@ dom.parentprocess:
     record_in_processes:
       - 'main'
 
+  process_launch_errors:
+    bug_numbers:
+      - 1819311
+    description: >
+      Collect precise set of error code and calling site upon process creation failure path.
+    expires: "never"
+    kind: uint
+    keyed: true
+    notification_emails:
+      - alissy@mozilla.com
+    products:
+      - 'firefox'
+    record_in_processes:
+      - 'main'
+    release_channel_collection: opt-out
+
 devtools.toolbar.eyedropper:
   opened:
     bug_numbers:
