Bug 1826452 - Use non-rounded external scroll offsets behind a pref. r=botond,gw
Differential Revision: https://phabricator.services.mozilla.com/D175295

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -864,6 +864,12 @@
   value: 500
   mirror: always
 
+# Whether to use rounded external scroll offsets.
+- name: apz.rounded_external_scroll_offset
+  type: bool
+  value: false
+  mirror: always
+
 #---------------------------------------------------------------------------
 # Prefs starting with "beacon."
 #---------------------------------------------------------------------------
