Bug 1787182 [Linux] Implement glxtest test as binary r=emilio
glxtest is run later when Firefox already spawns threads. Recently glxtest runs in forked process
which doesn't work correctly in multi-thread environment, so we need to move glxtest to different binary file
and launch it as stand alone code.

Differential Revision: https://phabricator.services.mozilla.com/D173486

--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -108,6 +108,8 @@
 #ifdef MOZ_WAYLAND
 @BINPATH@/@DLL_PREFIX@mozwayland@DLL_SUFFIX@
 #endif
+@BINPATH@/vaapitest
+@BINPATH@/glxtest
 #endif
 
 ; We don't have a complete view of which dlls to expect when doing an artifact
@@ -157,9 +159,6 @@
 #else
 @BINPATH@/@DLL_PREFIX@qipcap@DLL_SUFFIX@
 #endif
-#endif
-#ifdef MOZ_GTK
-@BINPATH@/vaapitest
 #endif
 
 ; [Components]
