--- a/testing/web-platform/meta/storage-access-api/requestStorageAccess-same-site-iframe.sub.https.window.js.ini
+++ b/testing/web-platform/meta/storage-access-api/requestStorageAccess-same-site-iframe.sub.https.window.js.ini
@@ -1,10 +1,9 @@
 [requestStorageAccess-same-site-iframe.sub.https.window.html]
   expected:
-    if (os == "win") and not swgl and not debug and (processor == "x86_64"): [OK, TIMEOUT]
+    if (os == "win"): [OK, TIMEOUT]
     if (os == "linux") and swgl and not fission: [OK, TIMEOUT]
     if (os == "android") and not swgl: [OK, TIMEOUT]
-    if (os == "win") and swgl: [TIMEOUT, OK]
-    if (os == "mac") and not debug: [TIMEOUT, OK]
+    if (os == "mac"): [TIMEOUT, OK]
   [[same-site-frame\] document.requestStorageAccess() should resolve in top-level frame or same-site iframe, otherwise reject with a NotAllowedError with no user gesture.]
     expected: FAIL
 
