Bug 1625121 - [devtools] scrolling the tabs to the seleted tab r=jdescottes,devtools-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D173438

--- a/devtools/client/netmonitor/test/browser.ini
+++ b/devtools/client/netmonitor/test/browser.ini
@@ -284,6 +284,7 @@ skip-if = true # Bug 1373558
 skip-if = win10_2004 # Bug 1723573
 [browser_net_status-codes.js]
 [browser_net_streaming-response.js]
+[browser_net_tabbar_focus.js]
 [browser_net_telemetry_edit_resend.js]
 [browser_net_telemetry_filters_changed.js]
 [browser_net_telemetry_persist_toggle_changed.js]
