Bug 1805932 - Put the main thread in the background when the ProcessPriorityManager sets background priority. r=nika,florian
This patch introduces a way to put the main thread of background content processes in the background on MacOS. Currently disabled by default, and enabling for testing further restricts it to nightly only.

Differential Revision: https://phabricator.services.mozilla.com/D167952

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -14264,6 +14264,14 @@
   value: @IS_NIGHTLY_BUILD@
   mirror: always
 
+
+# If the process priority is set to background, put the main thread in the background.
+# Currently off by default.
+- name: threads.lower_mainthread_priority_in_background.enabled
+  type: bool
+  value: false
+  mirror: always
+
 #---------------------------------------------------------------------------
 # Prefs starting with "timer."
 #---------------------------------------------------------------------------
