Bug 1821187 - Add infrastructure for file migrators in the new Migration Wizard. r=fluent-reviewers,kpatenio,flod
This also includes our first file migrator, which imports passwords from CSV/TSV files.

Depends on D174537

Differential Revision: https://phabricator.services.mozilla.com/D173033

--- a/browser/components/migration/tests/browser/browser.ini
+++ b/browser/components/migration/tests/browser/browser.ini
@@ -11,6 +11,10 @@ prefs =
 [browser_disabled_migrator.js]
 [browser_do_migration.js]
 [browser_entrypoint_telemetry.js]
+[browser_file_migration.js]
+skip-if = os == "win" && debug # Bug 1827995
+support-files =
+  dummy_file.csv
 [browser_ie_edge_bookmarks_success_strings.js]
 [browser_safari_permissions.js]
 run-if =
