Bug 1820141 - improve accessibility for PiP subtitles panel r=pip-reviewers,bnasar,fluent-reviewers,flod,mhowell
This patch makes the subtitles settings panel easier to understand when using a screen reader, as well as
easier to navigate when using keyboard. Accessibility improvements include:

- announcing the panel when tabbing to it
- setting focus on the first interactable element when opening the panel
- announcing label for subtitles toggle and group label for font size radio buttons
- setting `aria-expanded` attribute to notify users that the subtitles video control has a collapsable panel

Keyboard improvements include:
- ESC key closes panel when open
- setting focus on the subtitles video control after closing the panel with ESC key

Differential Revision: https://phabricator.services.mozilla.com/D172314

--- a/toolkit/components/pictureinpicture/tests/browser.ini
+++ b/toolkit/components/pictureinpicture/tests/browser.ini
@@ -101,6 +101,7 @@ skip-if = os == "win" && bits == 64 && debug # Bug 1683002
 [browser_smallVideoLayout.js]
 skip-if = os == "win" && bits == 64 && debug # Bug 1683002
 [browser_stripVideoStyles.js]
+[browser_subtitles_settings_panel.js]
 [browser_tabIconOverlayPiP.js]
 [browser_telemetry_enhancements.js]
 [browser_text_tracks_webvtt_1.js]
