--- a/taskcluster/ci/toolchain/clang-tidy.yml
+++ b/taskcluster/ci/toolchain/clang-tidy.yml
@@ -107,15 +107,11 @@ win64-clang-tidy:
 linux64-clang-tidy-external:
     attributes:
         local-toolchain: false
+        artifact_prefix: project/civet
     index:
         job-name: linux64-clang-tidy-external
     treeherder:
         symbol: TL(clang-tidy-e)
-    worker:
-        artifacts:
-            - name: project/civet/clang-tidy.tar.zst
-              path: /builds/worker/private-artifacts/clang-tidy.tar.zst
-              type: file
     run:
         toolchain-artifact: project/civet/clang-tidy.tar.zst
         script: build-clang-tidy-external.sh
