--- a/testing/web-platform/meta/html/browsers/browsing-the-web/navigating-across-documents/initial-empty-document/iframe-src-204-fragment.html.ini
+++ b/testing/web-platform/meta/html/browsers/browsing-the-web/navigating-across-documents/initial-empty-document/iframe-src-204-fragment.html.ini
@@ -1,20 +1,22 @@
 [iframe-src-204-fragment.html]
   [src]
     expected:
-      if (os == "win") and debug and (processor == "x86_64") and not swgl: [FAIL, PASS]
-      if (os == "win") and debug and (processor == "x86_64") and swgl: [PASS, FAIL]
-      if (os == "win") and debug and (processor == "x86"): [PASS, FAIL]
-      if (os == "linux") and debug: [PASS, FAIL]
-      if (os == "linux") and not debug: [FAIL, PASS]
-      if (os == "win") and not debug: [PASS, FAIL]
-      if (os == "mac"): [PASS, FAIL]
+      if fission and (os == "win") and debug and (processor == "x86_64") and not swgl: [FAIL, PASS]
+      if fission and (os == "win") and debug and (processor == "x86_64") and swgl: [PASS, FAIL]
+      if fission and (os == "win") and debug and (processor == "x86"): [PASS, FAIL]
+      if fission and (os == "linux") and debug: [PASS, FAIL]
+      if fission and (os == "linux") and not debug: [FAIL, PASS]
+      if fission and (os == "win") and not debug: [PASS, FAIL]
+      if fission and (os == "mac"): [PASS, FAIL]
       FAIL
 
   [location.href]
     expected:
-      if (os == "win") and debug and (processor == "x86_64") and not swgl: [FAIL, PASS]
-      if (os == "linux") and not debug: [FAIL, PASS]
+      if fission and (os == "win") and debug and (processor == "x86_64") and not swgl: [FAIL, PASS]
+      if fission and (os == "linux") and not debug: [FAIL, PASS]
+      if not fission and swgl and (os == "linux"): [FAIL, PASS]
       if not fission and swgl and (os == "android"): FAIL
+      if not fission and not swgl: FAIL
       [PASS, FAIL]
 
   [location.assign]
