Bug 1825428 - [devtools] Fix browser_net_copy_as_curl to use valid sjs resources r=devtools-reviewers,nchevobbe
Differential Revision: https://phabricator.services.mozilla.com/D174036

--- a/devtools/client/netmonitor/test/browser.ini
+++ b/devtools/client/netmonitor/test/browser.ini
@@ -76,6 +76,7 @@ support-files =
   sjs_simple-test-server.sjs
   sjs_simple-unsorted-cookies-test-server.sjs
   sjs_slow-script-server.sjs
+  sjs_slow-test-server.sjs
   sjs_sorting-test-server.sjs
   sjs_sse-test-server.sjs
   sjs_status-codes-test-server.sjs
